--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,12 +35,12 @@ header:
     show_search: true
     show_theme_chooser: true
     logo:
-      text: "Junfei Zhan"
+      text: "Haoxun Shen (沈昊迅)"
 
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Junfei Zhan. This work is licensed under {license}'
+    notice: '© {2025} Haoxun Shen. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
